Dash Chat: remove hero Stay Connected button; update roadmap Alpha to Late 2025; header/menu cleanup and light-blue CTA styling

--- a/dashchat/index.html
+++ b/dashchat/index.html
@@ -24,35 +24,15 @@
           <a href="index.html" class="home-link">darksoil studio</a>
         </div>
         <div class="menu-right">
-          <div class="dropdown">
-            <a href="#" class="dropdown-toggle">Projects ▾</a>
-            <div class="dropdown-menu">
-              <a href="dashchat/">Dash Chat</a>
-              <a href="corri.html">Corri AI</a>
-              <a href="https://darksoil.studio/p2p-shipyard" target="_blank" rel="noopener">p2p Shipyard</a>
-              <a href="bouy-os.html">Buoy</a>
-            </div>
-          </div>
-          <a href="contact.html">Connect</a>
-          <div class="menu-separator"></div>
-          <custom-social-link name="Github" url="https://github.com/darksoil-studio"></custom-social-link>
-          <a href="https://darksoil.studio/p2p-shipyard/" class="dev-btn" target="_blank" rel="noopener" title="Developer Documentation">developer portal</a>
+          <a href="#stay-connected" class="cta-btn" title="Stay Connected" style="border:1px solid #1D4ED8; border-radius:8px; padding:6px 10px; color:#1D4ED8; text-decoration:none; font-weight:600;">stay connected</a>
+          <custom-social-link name="Github" url="https://github.com/darksoil-studio/dash-chat"></custom-social-link>
         </div>
       </nav>
       <div class="mobile-menu-overlay">
         <button class="close-mobile-menu" aria-label="Close menu">&times;</button>
         <nav class="mobile-menu-content">
-          <div class="dropdown mobile-dropdown">
-            <a href="#" class="dropdown-toggle">Projects ▾</a>
-            <div class="dropdown-menu">
-              <a href="dashchat/">Dash Chat</a>
-              <a href="corri.html">Corri AI</a>
-              <a href="https://darksoil.studio/p2p-shipyard" target="_blank" rel="noopener">p2p Shipyard</a>
-              <a href="bouy-os.html">Buoy</a>
-            </div>
-          </div>
-          <a href="contact.html">Connect</a>
-          <a href="https://darksoil.studio/p2p-shipyard/" class="dev-btn" target="_blank" rel="noopener" title="Developer Documentation">developer portal</a>
+          <a href="#stay-connected" class="cta-btn" title="Stay Connected" style="border:1px solid #1D4ED8; border-radius:8px; padding:8px 12px; color:#1D4ED8; text-decoration:none; font-weight:600;">stay connected</a>
+          <a href="https://github.com/darksoil-studio/dash-chat" target="_blank" rel="noopener">GitHub</a>
         </nav>
       </div>
 
@@ -229,8 +209,7 @@
         Community Partners
       </h3>
       <div style="display:flex; align-items:center; justify-content:center; gap: 12px; margin: 0 0 1.5em 0; text-align: center;">
-        <img src="../activate_rights.png" alt="Activate Rights" style="height: 42px; width: auto;" />
-        <div style="font-weight: 600;">Activate Rights</div>
+        <img src="../activate_rights.png" alt="Activate Rights" style="max-width: 200px; width: 100%; height: auto; display: block;" />
       </div>
       <div style="border: 1px solid #e5e7eb; border-radius: 8px; padding: 16px; background: #fff; display: grid; gap: 18px;">
         <div>
@@ -629,7 +608,7 @@
             </div>
           </div>
           <div style="display: flex; align-items: center; gap: 0.75em;">
-            <img src="../shoeb.jpg" alt="Shoeb Abdullah" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover;" />
+            <img src="../shoeb.jpeg" alt="Shoeb Abdullah" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover;" />
             <div>
               <div style="font-weight: 600;">Shoeb Abdullah</div>
               <div style="font-size: 0.9em; color: #666;">Activate Rights</div>
