--- a/dashchat/index.html
+++ b/dashchat/index.html
@@ -58,8 +58,8 @@
         <div style="margin-top: 0.25em; font-weight: 600; font-size: 0.95em;">I’d like to…</div>
         <div style="display: flex; flex-direction: column; gap: 0.5em;">
           <label style="display: flex; align-items: center; gap: 0.5em; cursor: pointer;">
-            <input type="checkbox" id="opt_newsletter" name="newsletter" value="yes" style="margin: 0;">
-            <span>Get the newsletter (very occasional)</span>
+            <input type="checkbox" id="opt_test" name="test" value="yes" style="margin: 0;">
+            <span>Test Dash Chat</span>
           </label>
           <label style="display: flex; align-items: center; gap: 0.5em; cursor: pointer;">
             <input type="checkbox" id="opt_pilot" name="pilot" value="yes" style="margin: 0;">
