Revert: restore paragraph line-height to 1.6

--- a/dashchat.html
+++ b/dashchat.html
@@ -143,7 +143,7 @@
             <li>Push notifications</li>
             <li>p2p networking integration</li>
             <li>Linked devices</li>
-            <li>Android, Mac, Linux</li>
+            <li>Android, Mac, Linux, Windows</li>
             <li>WiFi</li>
             <li>Google Play Store</li>
           </ul>
@@ -162,7 +162,7 @@
             <li>Community Governance</li>
             <li>Community Partners</li>
             <li>Bluetooth</li>
-            <li>iOS (beta version), Windows</li>
+            <li>iOS (beta version)</li>
             <li>Group invite links</li>
             <li>Bridging between shutdowns and internet<div style="font-size: 0.9em; color: #6b7280;">Starlink, satellite, etc.</div></li>
           </ul>
