Copy: 'implementing' -> 'using' for encryption protocols text (dashchat + drapac)

--- a/dashchat/index.html
+++ b/dashchat/index.html
@@ -160,7 +160,7 @@
         Security
       </h3>
       <p>
-        Dash Chat is built with end-to-end encryption and advanced security features to protect users' communications. We're implementing robust encryption protocols and security measures to ensure that messages remain private and secure, even in challenging network environments.
+        Dash Chat is built with end-to-end encryption and advanced security features to protect users' communications. We're using robust encryption protocols and security measures to ensure that messages remain private and secure, even in challenging network environments.
       </p>
       
       <h3 style="font-family: 'Rubik', sans-serif; font-size: 1.3em; font-weight: 500; margin: 2em 0 0.75em 0; display: flex; align-items: center; gap: 0.5em;">
