--- a/dashchat/index.html
+++ b/dashchat/index.html
@@ -262,7 +262,7 @@
             <li>Apple App Store</li>
             <li>Localize app in more languages</li>
             <li>Raspberry pi relay nodes</li>
-            <li>research alternative networks<div style="font-size: 0.9em; color: #6b7280;">Ham radio, riticulum, WiFi aware, etc.</div></li>
+            <li>Research alternative networks<div style="font-size: 0.9em; color: #6b7280;">Ham radio, reticulum, WiFi aware, etc.</div></li>
           </ul>
         </div>
       </div>
