--- a/dashchat/index.html
+++ b/dashchat/index.html
@@ -591,7 +591,7 @@
             </div>
             <div>
               <div style="font-weight: 600;">Stacey Tsui</div>
-              <div style="font-size: 0.9em; color: #666;">Security trainer</div>
+              <div style="font-size: 0.9em; color: #666;">Security Trainer</div>
             </div>
           </div>
           <div style="display: flex; align-items: center; gap: 0.75em;">
