Roadmap subhead size: Past/In Progress/Future larger; capitalize 'In Progress'

--- a/dashchat.html
+++ b/dashchat.html
@@ -132,7 +132,7 @@
       </div>
       <div style="border: 1px solid #e5e7eb; border-radius: 8px; padding: 16px; background: #fff; display: grid; gap: 18px;">
         <div>
-          <div style="font-weight: 700; color: #F59E0B; display:flex; align-items:center; gap:6px; margin-bottom: 6px;">
+          <div style="font-weight: 800; font-size: 1.2em; color: #F59E0B; display:flex; align-items:center; gap:6px; margin-bottom: 8px;">
             <svg width="16" height="16" viewBox="0 0 20 20" aria-hidden="true"><circle cx="6" cy="6" r="5" fill="#F59E0B"/><rect x="11" y="11" width="7" height="7" fill="#FCD34D"/></svg>
             Past
           </div>
@@ -149,9 +149,9 @@
           </ul>
         </div>
         <div>
-          <div style="font-weight: 700; color: #1D4ED8; display:flex; align-items:center; gap:6px; margin-bottom: 6px;">
+          <div style="font-weight: 800; font-size: 1.2em; color: #1D4ED8; display:flex; align-items:center; gap:6px; margin-bottom: 8px;">
             <svg width="16" height="16" viewBox="0 0 20 20" aria-hidden="true"><rect x="2" y="2" width="7" height="7" fill="#1D4ED8"/><circle cx="14" cy="14" r="4" fill="#93c5fd"/></svg>
-            In progress
+            In Progress
           </div>
           <ul style="margin: 0; padding-left: 20px; line-height: 1.55;">
             <li>UI/UX design</li>
@@ -168,7 +168,7 @@
           </ul>
         </div>
         <div>
-          <div style="font-weight: 700; color: #10B981; display:flex; align-items:center; gap:6px; margin-bottom: 6px;">
+          <div style="font-weight: 800; font-size: 1.2em; color: #10B981; display:flex; align-items:center; gap:6px; margin-bottom: 8px;">
             <svg width="16" height="16" viewBox="0 0 20 20" aria-hidden="true"><polygon points="10,2 18,18 2,18" fill="#10B981"/></svg>
             Future
           </div>
