Buttons: match Connect hover/active to header CTA blue; darker active state

--- a/dashchat.html
+++ b/dashchat.html
@@ -229,10 +229,10 @@
         <div class="g-recaptcha" data-sitekey="6LfXWbYrAAAAAA0JyvaevQVvn_5YCQIkLDJPOKoL"></div>
 
         <button type="submit" class="button" style="width: 100%; border: 1px solid #ccc; background: #f3f4f6; color: #111; border-radius: 8px; padding: 10px 12px; font-weight: 600;"
-          onmouseover="this.style.background='#1D4ED8'; this.style.color='#fff'; this.style.border='1px solid #1D4ED8'"
+          onmouseover="this.style.background='#93C5FD'; this.style.color='#1D4ED8'; this.style.border='1px solid #93C5FD'"
           onmouseout="this.style.background='#f3f4f6'; this.style.color='#111'; this.style.border='1px solid #ccc'"
-          onmousedown="this.style.background='#DBEAFE'; this.style.color='#1D4ED8'; this.style.border='1px solid #93C5FD'"
-          onmouseup="this.style.background='#1D4ED8'; this.style.color='#fff'; this.style.border='1px solid #1D4ED8'"
+          onmousedown="this.style.background='#60A5FA'; this.style.color='#1D4ED8'; this.style.border='1px solid #1D4ED8'"
+          onmouseup="this.style.background='#93C5FD'; this.style.color='#1D4ED8'; this.style.border='1px solid #93C5FD'"
         >Connect</button>
       </form>
       <div id="formSuccess" style="display:none; max-width: 400px; margin: 0.5em 0 2em 0; padding: 16px; border: 1px solid #e5e7eb; border-radius: 8px; background: #f8fafc; color: #111; text-align: left;">
