--- a/dashchat/index.html
+++ b/dashchat/index.html
@@ -78,9 +78,11 @@
 
         <div class="g-recaptcha" data-sitekey="6LfXWbYrAAAAAA0JyvaevQVvn_5YCQIkLDJPOKoL"></div>
 
-        <button type="submit" class="button" style="width: 100%; border: 1px solid #ccc;"
-          onmouseover="this.style.border='2px solid #1D4ED8'"
-          onmouseout="this.style.border='1px solid #ccc'"
+        <button type="submit" class="button" style="width: 100%; border: 1px solid #ccc; background:#f3f4f6; color:#111; border-radius:8px; padding:10px 12px; font-weight:600;"
+          onmouseover="this.style.background='#93C5FD'; this.style.color='#1D4ED8'; this.style.border='1px solid #93C5FD'"
+          onmouseout="this.style.background='#f3f4f6'; this.style.color='#111'; this.style.border='1px solid #ccc'"
+          onmousedown="this.style.background='#60A5FA'; this.style.color='#1D4ED8'; this.style.border='1px solid #1D4ED8'"
+          onmouseup="this.style.background='#93C5FD'; this.style.color='#1D4ED8'; this.style.border='1px solid #93C5FD'"
         >Connect</button>
       </form>
     </header>
