--- a/people/index.html
+++ b/people/index.html
@@ -133,12 +133,12 @@
       </h3>
       <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 1em; align-items: start;">
         <div style="text-align: left;">
-          <img src="eric_bw_circle_smile.png" alt="Eric Bear" style="width: 60px; height: 60px; border-radius: 50%; object-fit: cover; display: block; margin: 0 0 0.5em 0;" />
+          <img src="../eric_bw_circle_smile.png" alt="Eric Bear" style="width: 60px; height: 60px; border-radius: 50%; object-fit: cover; display: block; margin: 0 0 0.5em 0;" />
           <div style="font-weight: 600;">Eric Bear</div>
           <div style="font-size: 0.9em; color: #666;">Lead</div>
         </div>
         <div style="text-align: left;">
-          <img src="guillem_bw.png" alt="Guillem Córdoba" style="width: 60px; height: 60px; border-radius: 50%; object-fit: cover; display: block; margin: 0 0 0.5em 0;" />
+          <img src="../guillem_bw.png" alt="Guillem Córdoba" style="width: 60px; height: 60px; border-radius: 50%; object-fit: cover; display: block; margin: 0 0 0.5em 0;" />
           <div style="font-weight: 600;">Guillem Córdoba</div>
           <div style="font-size: 0.9em; color: #666;">Engineering</div>
         </div>
@@ -154,12 +154,12 @@
           <div style="font-size: 0.9em; color: #666;">UI/UX Design & Research</div>
         </div>
         <div style="text-align: left;">
-          <img src="viktor_bw_circle.png" alt="Viktor Zaunders" style="width: 60px; height: 60px; border-radius: 50%; object-fit: cover; display: block; margin: 0 0 0.5em 0;" />
+          <img src="../viktor_bw_circle.png" alt="Viktor Zaunders" style="width: 60px; height: 60px; border-radius: 50%; object-fit: cover; display: block; margin: 0 0 0.5em 0;" />
           <div style="font-weight: 600;">Viktor Zaunders</div>
           <div style="font-size: 0.9em; color: #666;">Operations</div>
         </div>
         <div style="text-align: left;">
-          <img src="michael_bw.png" alt="Michael Dougherty" style="width: 60px; height: 60px; border-radius: 50%; object-fit: cover; display: block; margin: 0 0 0.5em 0;" />
+          <img src="../michael_bw.png" alt="Michael Dougherty" style="width: 60px; height: 60px; border-radius: 50%; object-fit: cover; display: block; margin: 0 0 0.5em 0;" />
           <div style="font-weight: 600;">Michael Dougherty</div>
           <div style="font-size: 0.9em; color: #666;">Engineering</div>
         </div>
@@ -194,7 +194,7 @@
           <div style="font-size: 0.9em; color: #666;">Security Trainer</div>
         </div>
         <div style="text-align: left;">
-          <img src="shoeb.jpeg" alt="Shoeb Abdullah" style="width: 60px; height: 60px; border-radius: 50%; object-fit: cover; display: block; margin: 0 0 0.5em 0;" />
+          <img src="../shoeb.jpeg" alt="Shoeb Abdullah" style="width: 60px; height: 60px; border-radius: 50%; object-fit: cover; display: block; margin: 0 0 0.5em 0;" />
           <div style="font-weight: 600;">Shoeb Abdullah</div>
           <div style="font-size: 0.9em; color: #666;">Activate Rights</div>
         </div>
