Fix CSS path in people page to load stylesheet correctly

--- a/people/index.html
+++ b/people/index.html
@@ -80,7 +80,7 @@
       }
     </style>
     <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
     <title>People - darksoil studio</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   </head>
