Add Alex Linton from Session to advisors list

--- a/people/index.html
+++ b/people/index.html
@@ -229,6 +229,17 @@
           <div style="font-weight: 600;">Michael Suantak</div>
           <div style="font-size: 0.9em; color: #666;">Association for Progressive Communication</div>
         </div>
+        <div style="text-align: left;">
+          <div style="width: 60px; height: 60px; border-radius: 50%; background: #e9ecef; display: flex; align-items: center; justify-content: center; margin: 0 0 0.5em 0;">
+            <svg width="22" height="22" viewBox="0 0 22 22" aria-hidden="true" focusable="false">
+              <circle cx="11" cy="11" r="8" fill="#E63946"/>
+              <polygon points="11,3 15,19 7,19" fill="#F59E0B"/>
+              <rect x="9" y="15" width="4" height="2" fill="#1D4ED8"/>
+            </svg>
+          </div>
+          <div style="font-weight: 600;">Alex Linton</div>
+          <div style="font-size: 0.9em; color: #666;">Session</div>
+        </div>
       </div>
     </rocket-content-area>
 
