--- a/dashchat.html
+++ b/dashchat.html
@@ -303,8 +303,9 @@
         </svg>
         Supported by
       </h3>
-      <div style="text-align: center; margin: 0 0 2em 0;">
-        <img src="otf-logo.webp" alt="OTF UXD Lab Logo" style="max-width: 200px; width: 100%; height: auto; display: block; margin: 0 auto;" />
+      <div style="display:flex; align-items:center; justify-content:center; gap: 40px; margin: 0 0 2em 0; text-align: center; flex-wrap: wrap;">
+        <img src="otf-logo.webp" alt="OTF UXD Lab Logo" style="max-width: 200px; width: 100%; height: auto; display: block;" />
+        <img src="p2pandalogo.png" alt="p2panda Logo" style="max-width: 200px; width: 100%; height: auto; display: block;" />
       </div>
     </rocket-content-area>
 
