--- a/dashchat.html
+++ b/dashchat.html
@@ -292,8 +292,12 @@
         Community Partners
       </h3>
       <div style="display:flex; align-items:center; justify-content:center; gap: 40px; margin: 0 0 1.5em 0; text-align: center; flex-wrap: wrap;">
-        <img src="activate_rights.png" alt="Activate Rights" style="max-width: 200px; width: 100%; height: auto; display: block;" />
-        <img src="ASL19-English (1).png" alt="ASL19" style="max-width: 200px; width: 100%; height: auto; display: block;" />
+        <a href="https://activaterights.org/" target="_blank" rel="noopener noreferrer" title="Visit activaterights.org">
+          <img src="activate_rights.png" alt="Activate Rights" style="max-width: 200px; width: 100%; height: auto; display: block;" />
+        </a>
+        <a href="https://asl19.org/en" target="_blank" rel="noopener noreferrer" title="Visit asl19.org">
+          <img src="ASL19-English (1).png" alt="ASL19" style="max-width: 200px; width: 100%; height: auto; display: block;" />
+        </a>
       </div>
       
       <h3 style="font-family: 'Rubik', sans-serif; font-size: 1.5em; font-weight: 700; margin: 2em 0 1em 0; display: flex; align-items: center; gap: 0.5em;">
@@ -304,7 +308,9 @@
         Supported by
       </h3>
       <div style="display:flex; align-items:center; justify-content:center; gap: 40px; margin: 0 0 2em 0; text-align: center; flex-wrap: wrap;">
-        <img src="otf-logo.webp" alt="OTF UXD Lab Logo" style="max-width: 200px; width: 100%; height: auto; display: block;" />
+        <a href="https://www.opentech.fund/" target="_blank" rel="noopener noreferrer" title="Visit opentech.fund">
+          <img src="otf-logo.webp" alt="OTF UXD Lab Logo" style="max-width: 200px; width: 100%; height: auto; display: block;" />
+        </a>
         <a href="https://p2panda.org/" target="_blank" rel="noopener noreferrer" title="Visit p2panda.org">
           <img src="p2pandalogo.png" alt="p2panda Logo" style="max-width: 280px; width: 100%; height: auto; display: block;" />
         </a>
