Fix vertical alignment by setting consistent container heights
- Added height: 80px to all logo link containers
- Added max-height: 80px to all logo images
- This ensures logos are vertically centered relative to each other
- Fixes the off-kilter alignment issue caused by different image dimensions

--- a/dashchat/index.html
+++ b/dashchat/index.html
@@ -460,11 +460,11 @@
         Community Partners
       </h3>
       <div style="display:flex; align-items:center; justify-content:center; gap: 40px; margin: 0 0 1.5em 0; text-align: center; flex-wrap: wrap;">
-        <a href="https://activaterights.org/" target="_blank" rel="noopener noreferrer" title="Visit activaterights.org" style="display: flex; align-items: center; justify-content: center;">
-          <img src="../activate_rights.png" alt="Activate Rights" style="max-width: 200px; width: auto; height: auto; object-fit: contain;" />
+        <a href="https://activaterights.org/" target="_blank" rel="noopener noreferrer" title="Visit activaterights.org" style="display: flex; align-items: center; justify-content: center; height: 80px;">
+          <img src="../activate_rights.png" alt="Activate Rights" style="max-width: 200px; max-height: 80px; width: auto; height: auto; object-fit: contain;" />
         </a>
-        <a href="https://asl19.org/en" target="_blank" rel="noopener noreferrer" title="Visit asl19.org" style="display: flex; align-items: center; justify-content: center;">
-          <img src="../ASL19-English (1).png" alt="ASL19" style="max-width: 200px; width: auto; height: auto; object-fit: contain;" />
+        <a href="https://asl19.org/en" target="_blank" rel="noopener noreferrer" title="Visit asl19.org" style="display: flex; align-items: center; justify-content: center; height: 80px;">
+          <img src="../ASL19-English (1).png" alt="ASL19" style="max-width: 200px; max-height: 80px; width: auto; height: auto; object-fit: contain;" />
         </a>
       </div>
       
@@ -476,11 +476,11 @@
         Supported by
       </h3>
       <div style="display:flex; align-items:center; justify-content:center; gap: 40px; margin: 0 0 2em 0; text-align: center; flex-wrap: wrap;">
-        <a href="https://www.opentech.fund/" target="_blank" rel="noopener noreferrer" title="Visit opentech.fund" style="display: flex; align-items: center; justify-content: center;">
-          <img src="../otf-logo.webp" alt="OTF UXD Lab Logo" style="max-width: 200px; width: auto; height: auto; object-fit: contain;" />
+        <a href="https://www.opentech.fund/" target="_blank" rel="noopener noreferrer" title="Visit opentech.fund" style="display: flex; align-items: center; justify-content: center; height: 80px;">
+          <img src="../otf-logo.webp" alt="OTF UXD Lab Logo" style="max-width: 200px; max-height: 80px; width: auto; height: auto; object-fit: contain;" />
         </a>
-        <a href="https://p2panda.org/" target="_blank" rel="noopener noreferrer" title="Visit p2panda.org" style="display: flex; align-items: center; justify-content: center;">
-          <img src="../p2pandalogo.png" alt="p2panda Logo" style="max-width: 280px; width: auto; height: auto; object-fit: contain;" />
+        <a href="https://p2panda.org/" target="_blank" rel="noopener noreferrer" title="Visit p2panda.org" style="display: flex; align-items: center; justify-content: center; height: 80px;">
+          <img src="../p2pandalogo.png" alt="p2panda Logo" style="max-width: 280px; max-height: 80px; width: auto; height: auto; object-fit: contain;" />
         </a>
       </div>
       <div style="border: 1px solid #e5e7eb; border-radius: 8px; padding: 16px; background: #fff; display: grid; gap: 18px;">
