Add Defend Defenders logo to Community Partners, add Mark Kiggundu and Laura Guntrum as advisors, and improve p2panda logo styling in dark mode

--- a/people/index.html
+++ b/people/index.html
@@ -251,6 +251,29 @@
           <div style="font-weight: 600;">Hapee de Groot</div>
           <div style="font-size: 0.9em; color: #666;">Front Line Defenders</div>
         </div>
+        <div style="text-align: left;">
+          <div style="width: 60px; height: 60px; border-radius: 50%; background: #e9ecef; display: flex; align-items: center; justify-content: center; margin: 0 0 0.5em 0;">
+            <svg width="22" height="22" viewBox="0 0 22 22" aria-hidden="true" focusable="false">
+              <circle cx="11" cy="11" r="8" fill="#E63946"/>
+              <rect x="6" y="6" width="10" height="3" fill="#F59E0B"/>
+              <rect x="6" y="12" width="10" height="3" fill="#1D4ED8"/>
+              <rect x="6" y="18" width="10" height="3" fill="#10B981"/>
+            </svg>
+          </div>
+          <div style="font-weight: 600;">Mark Kiggundu</div>
+          <div style="font-size: 0.9em; color: #666;">Defend Defenders</div>
+        </div>
+        <div style="text-align: left;">
+          <div style="width: 60px; height: 60px; border-radius: 50%; background: #e9ecef; display: flex; align-items: center; justify-content: center; margin: 0 0 0.5em 0;">
+            <svg width="22" height="22" viewBox="0 0 22 22" aria-hidden="true" focusable="false">
+              <rect x="3" y="3" width="16" height="16" fill="#8B5CF6"/>
+              <circle cx="11" cy="11" r="6" fill="#F59E0B"/>
+              <polygon points="11,5 14,17 8,17" fill="#1D4ED8"/>
+            </svg>
+          </div>
+          <div style="font-weight: 600;">Laura Guntrum</div>
+          <div style="font-size: 0.9em; color: #666;">Researcher</div>
+        </div>
       </div>
     </rocket-content-area>
 
